# keyper

./: .gitignore  .pylintrc  README.md  azure-pipelines.yml  pylintrc  pyproject.toml  requirements.txt  setup.py  stylecheck.sh  test.sh
.azure/: azure-pipelines.yml
.github/: CODEOWNERS
keyper/: __init__.py  certificate.py  const.py  exceptions.py  keychain.py  keychain_certificate.py  keyper.py  temporary_keychain.py
tests/: TestCert_CodeSign.cer  TestCert_CodeSign.p12  test_certificates.py  test_keychain.py  test_keyper.py  test_passwords.py  tests.py
