[tool.poetry]
name = "keyper"
version = "0.4.0"
description = "A utility for dealing with the macOS keychain."

license = "MIT"

authors = [
    "Dale Myers <dalemy@microsoft.com>"
]

readme = 'README.md'

repository = "https://github.com/Microsoft/keyper"
homepage = "https://github.com/Microsoft/keyper"

keywords = ['apple', 'macOS', 'keychain', 'certificates', 'passwords']

classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Topic :: Software Development',
    'Topic :: Utilities'
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "=0.670"
pylint = "=2.3.1"
pytest = "=4.0.1"
pytest-cov = "=2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
