[tool.poetry]
name = "keyper"
version = "0.7.0"
description = "A utility for dealing with the macOS keychain."

license = "MIT"

authors = [
    "Dale Myers <dalemy@microsoft.com>"
]

readme = 'README.md'

repository = "https://github.com/Microsoft/keyper"
homepage = "https://github.com/Microsoft/keyper"

keywords = ['apple', 'macOS', 'keychain', 'certificates', 'passwords']

classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Topic :: Software Development',
    'Topic :: Utilities'
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "=21.5b2"
mypy = "=0.910"
pylint = "=2.11.1"
pytest = "=6.2.5"
pytest-cov = "=3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
